manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 82161545-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: "template-82161545.ce-aa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-82161545
            port:
              number: 8080
        pathType: Prefix
